# trading-system-health-monitor

./: .gitignore  README.md  config.yaml  monitor.py  pyproject.toml  requirements.txt
ai/: _init_.py  analyzer.py  prompts.py
config/: config.yaml
src/ops_toolkit/: cli.py  config.py  logger.py  main.py
src/ops_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/ops_toolkit/alerts/: notifier.py
src/ops_toolkit/checks/: cpu.py  endpoints.py  memory.py  windows_services.py
